--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,13 @@
     margin-bottom: 22px;
     background-color: pink;
 }
+
+.header .logo a {
+    display: block;
+    margin-right: 40px;
+    width: 261px;
+    height: 88px;
+    font-size: 0;
+    background: url(../images/logo.png) no-repeat;
+    background-size: 261px 88px;
+}
