--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /* 首页样式 */
 .header {
     display: flex;
-    height: 88px;
+    height: 67px;
     margin-top: 22px;
     margin-bottom: 22px;
     background-color: pink;
@@ -10,9 +10,29 @@
 .header .logo a {
     display: block;
     margin-right: 40px;
-    width: 261px;
-    height: 88px;
+    width: 200px;
+    height: 67px;
     font-size: 0;
     background: url(../images/logo.png) no-repeat;
-    background-size: 261px 88px;
+    background-size: 200px 67px;
+}
+
+.nav {
+    line-height: 67px;
+    margin-right: 28px;
+    user-select: none;
+}
+
+.nav ul {
+    display: flex;
+}
+
+.nav ul li a {
+    margin-right: 47px;
+    padding-bottom: 10px;
+}
+
+.nav ul li a:hover {
+    color: #5eb69c;
+    border-bottom: 2px solid #5eb69c;
 }
