--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 /* 首页样式 */
 .header {
     display: flex;
+    align-items: center;
     height: 67px;
     margin-top: 22px;
     margin-bottom: 22px;
-    background-color: pink;
 }
 
 .header .logo a {
@@ -18,7 +18,6 @@
 }
 
 .nav {
-    line-height: 67px;
     margin-right: 28px;
     user-select: none;
 }
@@ -35,4 +34,29 @@
 .nav ul li a:hover {
     color: #5eb69c;
     border-bottom: 2px solid #5eb69c;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    width: 170px;
+    height: 34px;
+    margin-right: 45px;
+    border-bottom: 2px solid #f4f4f4;
+}
+
+.search .iconfont {
+    font-size: 18px;
+    margin-right: 8px;
+}
+
+.search input {
+    flex: 1;
+    width: 0;
+    height: 34px;
+}
+
+.search input::placeholder {
+    font-size: 16px;
+    color: #ccc;
 }
