--- a/css/index.css
+++ b/css/index.css
@@ -60,3 +60,25 @@
     font-size: 16px;
     color: #ccc;
 }
+
+.cart {
+    position: relative;
+}
+
+.cart .iconfont {
+    font-size: 24px;
+}
+
+.cart i {
+    position: absolute;
+    left: 12px;
+    top: 1px;
+    height: 15px;
+    padding: 0 6px;
+    background-color: #e26237;
+    font-size: 14px;
+    color: #fffefe;
+    line-height: 15px;
+    border-radius: 8px;
+    user-select: none;
+}
