--- a/css/index.css
+++ b/css/index.css
@@ -88,8 +88,9 @@
 }
 
 .xxhw {
-    height: 500px;
+    height: 420px;
     margin-top: 30px;
+    user-select: none;
 }
 
 .tittle {
@@ -140,8 +141,11 @@
 }
 
 .bd ul li {
-    height: 370px;
+    height: 360px;
     width: 290px;
+}
+
+.xxhw .bd ul li {
     background-color: #c9ece185;
 }
 
@@ -165,4 +169,16 @@
 .xxhw .bd ul .desc h4 span {
     margin-left: 5px;
     font-size: 18px;
+}
+
+.rqtj {
+    height: 420px;
+    margin-top: 30px;
+    user-select: none;
+}
+
+.rqtj .bd ul .desc h4 {
+    text-align: center;
+    color: rgb(196, 189, 189);
+    font-size: 14px;
 }
